---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"package/src/bindings/index.d.ts\"].utf8_contents().unwrap()"
---
// @ts-ignore
import { WasmerPack } from "./wasmer-pack/wasmer-pack";

/**
 * Options used when initializing the bindings.
 */
export type LoadOptions = {
    /** Additional imports to be provided to the WebAssembly module */
    imports: WebAssembly.Imports,
    /**
     * A user-specified WebAssembly module to use instead of the one bundled
     * with this package.
     */
    module: WebAssembly.Module,
};

export default class Bindings {
    wasmer_pack(options?: Partial<LoadOptions>): Promise<WasmerPack>;
}
